--- a/haqqimizda.html
+++ b/haqqimizda.html
@@ -60,7 +60,7 @@
 
         </section>
 
-       <footer>Tüm haklar saklıdır &copy; | 2022</footer>
+       <footer>Tüm haklar saklıdırr &copy; | 2022</footer>
 
        </div>
 
